# http-static-server

./: CMakeLists.txt  README.md
headers/: Connection.h  Request.h  Response.h  Server.h  common.h
src/: Connection.cpp  Server.cpp  main.cpp
